[gd_scene load_steps=63 format=3 uid="uid://q0p8j4vc433c"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_mfq8h"]
[ext_resource type="PackedScene" uid="uid://dh3ocl34lg3dh" path="res://scenes/world/player.tscn" id="2_ii6h3"]
[ext_resource type="Shader" path="res://shaders/Game.gdshader" id="2_wbnov"]
[ext_resource type="PackedScene" uid="uid://dsaa4vfsxdl37" path="res://scenes/world/money.tscn" id="4_4nwhm"]
[ext_resource type="Texture2D" uid="uid://ca0ajj84jrdnj" path="res://assets/ui/MainPanel01.png" id="5_88b5c"]
[ext_resource type="Script" path="res://scripts/ui/dialog.gd" id="6_51ty7"]
[ext_resource type="MeshLibrary" uid="uid://cdxueohwd3sef" path="res://assets/meshes/cityassets.tres" id="7_m58bh"]
[ext_resource type="FontFile" uid="uid://1yuy1o07mph2" path="res://assets/fonts/URW Grotesk SC Regular.ttf" id="7_rt3cn"]
[ext_resource type="Texture2D" uid="uid://vvpwiwrv1fvx" path="res://assets/ui/buttons/Button Normal.png" id="8_jd6hj"]
[ext_resource type="FontFile" uid="uid://c7av1j5mjwa37" path="res://assets/fonts/URW Grotesk SC Light.ttf" id="9_k4d8i"]
[ext_resource type="Texture2D" uid="uid://c64pmfjh8j7ec" path="res://assets/ui/buttons/Button Disable.png" id="9_lmfon"]
[ext_resource type="Texture2D" uid="uid://bemv46m73p0r6" path="res://assets/ui/buttons/Button Hover.png" id="10_0vpjl"]
[ext_resource type="Script" path="res://scripts/ui/typewriter.gd" id="11_tqxcn"]
[ext_resource type="Resource" uid="uid://y6ic2kdpthvr" path="res://scenes/abilities/abil_secondabil.tres" id="15_w28vc"]
[ext_resource type="Script" path="res://scenes/abilities/basic_ability_script.gd" id="16_3uhxe"]
[ext_resource type="Resource" uid="uid://bkay3rew2586i" path="res://scenes/abilities/abil_thirdabil.tres" id="16_yji8p"]
[ext_resource type="Resource" uid="uid://dft8b1iy1npyh" path="res://scenes/abilities/abil_fourthabil.tres" id="17_1kxay"]
[ext_resource type="PackedScene" uid="uid://8tyqj84mvv8m" path="res://scenes/abilities/assets/plasma_ball.tscn" id="18_q0on2"]
[ext_resource type="Resource" uid="uid://bu24cpd7gihw4" path="res://scenes/abilities/assets/test_abil.tres" id="19_qwnsf"]
[ext_resource type="Script" path="res://scripts/ui/health_bar.gd" id="20_73y51"]
[ext_resource type="Resource" uid="uid://da3x75y4auqsh" path="res://scripts/player/player_stats_resource.tres" id="21_sfccr"]
[ext_resource type="PackedScene" uid="uid://c43mvr23c6gke" path="res://scenes/skilltree/skill_tree.tscn" id="26_auhyj"]
[ext_resource type="Script" path="res://scripts/ui/drone_camera.gd" id="26_bb6pl"]
[ext_resource type="PackedScene" uid="uid://dkmojbkfpsjow" path="res://scenes/enemies/xporb.tscn" id="26_iprpn"]
[ext_resource type="Texture2D" uid="uid://c6rk8ro2e6oeb" path="res://assets/ui/windows/Card X3.png" id="26_n8b2v"]
[ext_resource type="PackedScene" uid="uid://x3r8d5cox4a7" path="res://scenes/UI/inventory/inventory_ui.tscn" id="26_nv6hk"]
[ext_resource type="PackedScene" uid="uid://b475wnptaipdd" path="res://scenes/pause_menu.tscn" id="28_4ig8x"]
[ext_resource type="PackedScene" uid="uid://uvfwcht0hfmi" path="res://scenes/UI/minimap.tscn" id="28_a32ar"]
[ext_resource type="PackedScene" uid="uid://duu00ypj1dd7q" path="res://scenes/UI/abilities/ability_button.tscn" id="29_ladu2"]
[ext_resource type="Resource" uid="uid://dcjfxsl8b3wei" path="res://scenes/abilities/abil_keepcoming.tres" id="30_dbf63"]
[ext_resource type="PackedScene" uid="uid://cp15cenbvmedl" path="res://scenes/awesome_test_cube.tscn" id="32_6a8in"]
[ext_resource type="PackedScene" uid="uid://bfxt5jytjwrxn" path="res://scenes/enemies/chaser/enemy_mimic.tscn" id="34_s64ao"]

[sub_resource type="NavigationMesh" id="NavigationMesh_385kf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jnp1g"]
albedo_color = Color(0.201527, 0.201527, 0.201527, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wu1uj"]
material = SubResource("StandardMaterial3D_jnp1g")

[sub_resource type="BoxShape3D" id="BoxShape3D_21piy"]
size = Vector3(1, 1.59082, 1.02148)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4vka5"]
texture = ExtResource("5_88b5c")

[sub_resource type="Theme" id="Theme_n6ngb"]
Panel/styles/panel = SubResource("StyleBoxTexture_4vka5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t14s2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kx32d"]
texture = ExtResource("9_lmfon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_arse6"]
texture = ExtResource("10_0vpjl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nyrar"]
texture = ExtResource("8_jd6hj")

[sub_resource type="Animation" id="Animation_bshj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fs1qd"]
resource_name = "typewriter"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogue:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iedqb"]
_data = {
"RESET": SubResource("Animation_bshj3"),
"typewriter": SubResource("Animation_fs1qd")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syiin"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl5wp"]
bg_color = Color(1, 0.231373, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a6jd"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfia4"]
bg_color = Color(0, 0.52549, 1, 1)

[sub_resource type="InputEventAction" id="InputEventAction_87xu8"]
action = &"ability_one"

[sub_resource type="Shortcut" id="Shortcut_xe53s"]
events = [SubResource("InputEventAction_87xu8")]

[sub_resource type="Resource" id="Resource_gu0gh"]
script = ExtResource("16_3uhxe")
ability_scene = ExtResource("18_q0on2")

[sub_resource type="InputEventAction" id="InputEventAction_b14d4"]
action = &"ability_two"

[sub_resource type="Shortcut" id="Shortcut_5mvnc"]
events = [SubResource("InputEventAction_b14d4")]

[sub_resource type="InputEventAction" id="InputEventAction_50msj"]
action = &"ability_tree"

[sub_resource type="Shortcut" id="Shortcut_te72a"]
events = [SubResource("InputEventAction_50msj")]

[sub_resource type="InputEventAction" id="InputEventAction_t64ml"]
action = &"ability_four"

[sub_resource type="Shortcut" id="Shortcut_jfcgm"]
events = [SubResource("InputEventAction_t64ml")]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mm3f"]
texture = ExtResource("26_n8b2v")

[sub_resource type="Theme" id="Theme_v2ym0"]
Panel/styles/panel = SubResource("StyleBoxTexture_0mm3f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1lgv"]
render_priority = 0
shader = ExtResource("2_wbnov")
shader_parameter/color_depth = 8
shader_parameter/dithering = true
shader_parameter/resolution_scale = 2

[sub_resource type="QuadMesh" id="QuadMesh_fraa3"]
flip_faces = true
size = Vector2(2, 2)

[node name="Spacial" type="Node3D"]
script = ExtResource("1_mfq8h")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_385kf")

[node name="Floor" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(26.4785, 0, 0, 0, -0.851035, 0, 0, 0, 25.2955, 0, -1.06368, 0)
mesh = SubResource("BoxMesh_wu1uj")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00100086, -0.0181824, -0.000659283)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Floor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29541, -0.0107422)
shape = SubResource("BoxShape3D_21piy")

[node name="Player" parent="." instance=ExtResource("2_ii6h3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.23412, -0.103961, 2.3603)

[node name="UI" type="CanvasLayer" parent="Player"]

[node name="Dialog" type="Control" parent="Player/UI"]
visible = false
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.83
offset_top = -6.0
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = SubResource("Theme_n6ngb")
script = ExtResource("6_51ty7")

[node name="Box" type="Panel" parent="Player/UI/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.131
anchor_top = 0.086
anchor_right = 0.871
anchor_bottom = 1.055
offset_left = 0.0879822
offset_top = 0.216
offset_right = -0.39209
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2

[node name="okButton" type="Button" parent="Player/UI/Dialog/Box"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -198.0
offset_top = -97.0
offset_right = -84.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("7_rt3cn")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_t14s2")
theme_override_styles/disabled = SubResource("StyleBoxTexture_kx32d")
theme_override_styles/hover = SubResource("StyleBoxTexture_arse6")
theme_override_styles/normal = SubResource("StyleBoxTexture_nyrar")
text = "OK"

[node name="VBoxContainer" type="VBoxContainer" parent="Player/UI/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.167
anchor_right = 0.811
anchor_bottom = 0.875
offset_left = -0.488007
offset_top = 0.151993
offset_right = -0.272034
offset_bottom = -3.05176e-05

[node name="Title" type="Label" parent="Player/UI/Dialog/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.101961)
theme_override_fonts/font = ExtResource("7_rt3cn")
theme_override_font_sizes/font_size = 24
text = "Hello this is a Title"
horizontal_alignment = 1

[node name="Dialogue" type="RichTextLabel" parent="Player/UI/Dialog/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 0.298039)
theme_override_fonts/normal_font = ExtResource("9_k4d8i")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "This is a text!"
fit_content = true
autowrap_mode = 1
visible_characters = 0
visible_ratio = 0.0

[node name="TypeWriterEffect" type="AnimationPlayer" parent="Player/UI/Dialog/VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_iedqb")
}
script = ExtResource("11_tqxcn")

[node name="UI" type="Control" parent="Player/UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Player/UI/UI"]
layout_mode = 0
offset_left = 851.0
offset_top = 512.0
offset_right = 1143.0
offset_bottom = 519.0
theme_override_styles/background = SubResource("StyleBoxFlat_syiin")
theme_override_styles/fill = SubResource("StyleBoxFlat_nl5wp")
fill_mode = 1
show_percentage = false
script = ExtResource("20_73y51")
player_stats = ExtResource("21_sfccr")

[node name="Label" type="Label" parent="Player/UI/UI/HealthBar"]
layout_mode = 0
offset_left = 241.0
offset_top = -20.0
offset_right = 293.0
offset_bottom = 3.0
text = "Health"

[node name="ManaBar" type="ProgressBar" parent="Player/UI/UI"]
layout_mode = 0
offset_left = 850.0
offset_top = 538.0
offset_right = 1141.0
offset_bottom = 545.0
theme_override_styles/background = SubResource("StyleBoxFlat_0a6jd")
theme_override_styles/fill = SubResource("StyleBoxFlat_pfia4")
fill_mode = 1
show_percentage = false
script = ExtResource("20_73y51")
player_stats = ExtResource("21_sfccr")

[node name="Label" type="Label" parent="Player/UI/UI/ManaBar"]
layout_mode = 0
offset_left = 249.0
offset_top = -20.0
offset_right = 293.0
offset_bottom = 3.0
text = "Mana"

[node name="AbilityBar" type="HBoxContainer" parent="Player/UI/UI"]
layout_mode = 0
offset_left = 882.0
offset_top = 561.0
offset_right = 1054.0
offset_bottom = 601.0
scale = Vector2(1.5, 1.5)

[node name="AbilityButton" parent="Player/UI/UI/AbilityBar" node_paths=PackedStringArray("player") instance=ExtResource("29_ladu2")]
layout_mode = 2
shortcut = SubResource("Shortcut_xe53s")
abilityAtributes = ExtResource("30_dbf63")
action_name = "Test1"
input_config = "1"
spell_number = 1
player_ability = SubResource("Resource_gu0gh")
player = NodePath("../../../..")

[node name="AbilityButton2" parent="Player/UI/UI/AbilityBar" instance=ExtResource("29_ladu2")]
layout_mode = 2
shortcut = SubResource("Shortcut_5mvnc")
abilityAtributes = ExtResource("15_w28vc")
action_name = "Tes2"
input_config = "2"
spell_number = 2

[node name="AbilityButton3" parent="Player/UI/UI/AbilityBar" node_paths=PackedStringArray("player") instance=ExtResource("29_ladu2")]
layout_mode = 2
shortcut = SubResource("Shortcut_te72a")
abilityAtributes = ExtResource("16_yji8p")
action_name = "Test3"
input_config = "3"
spell_number = 3
player_ability = ExtResource("19_qwnsf")
player = NodePath("../../../..")

[node name="AbilityButton4" parent="Player/UI/UI/AbilityBar" instance=ExtResource("29_ladu2")]
layout_mode = 2
shortcut = SubResource("Shortcut_jfcgm")
abilityAtributes = ExtResource("17_1kxay")
action_name = "Test4"
input_config = "4"
spell_number = 4

[node name="deliveryDroneCam" type="Control" parent="Player/UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_v2ym0")
script = ExtResource("26_bb6pl")

[node name="Panel" type="Panel" parent="Player/UI/deliveryDroneCam"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 18.8
anchor_top = 0.175
anchor_right = 28.725
anchor_bottom = 9.45
offset_left = 148.0
offset_top = -10.0
offset_right = -3.00012
offset_bottom = -147.0

[node name="droneCamera" type="TextureRect" parent="Player/UI/deliveryDroneCam"]
layout_mode = 1
anchors_preset = -1
anchor_left = 22.55
anchor_right = 28.8
anchor_bottom = 6.225
offset_left = -6.0
offset_bottom = -1.52588e-05
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 4

[node name="SubViewport" type="SubViewport" parent="Player/UI/deliveryDroneCam/droneCamera"]
transparent_bg = true
size = Vector2i(300, 300)

[node name="Camera3D" type="Camera3D" parent="Player/UI/deliveryDroneCam/droneCamera/SubViewport"]
transform = Transform3D(0.726755, 0, 0.686897, 0, 1, 0, -0.686897, 0, 0.726755, 4.72343, 0.026615, 4.80754)
fov = 29.5

[node name="PauseMenu" parent="Player/UI" instance=ExtResource("28_4ig8x")]
visible = false
offset_right = -2.0
offset_bottom = -2.0

[node name="Minimap" parent="Player/UI" instance=ExtResource("28_a32ar")]
target = NodePath("../..")

[node name="SkillTree2" parent="Player/UI" instance=ExtResource("26_auhyj")]
visible = false

[node name="Shader" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.541)
visible = false
material_overlay = SubResource("ShaderMaterial_y1lgv")
mesh = SubResource("QuadMesh_fraa3")
skeleton = NodePath("../..")

[node name="SkillTree" parent="Player" instance=ExtResource("26_auhyj")]
visible = false

[node name="InventoryUI" parent="Player" instance=ExtResource("26_nv6hk")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.000483983, -0.990043, 0.140762, 0.00340408, 0.140763, 0.990038, -0.999994, -1.34167e-09, 0.00343831, 6.41712, 2.71247, -0.457095)
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("7_m58bh")
cell_size = Vector3(1, 1, 1)
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="Money" parent="." instance=ExtResource("4_4nwhm")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 8.43127, -0.159485, -1.88047)

[node name="AwesomeTestCube" parent="." instance=ExtResource("32_6a8in")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.7582, -0.140483, -2.62307)

[node name="mimic" parent="." instance=ExtResource("34_s64ao")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.763025, -0.622688, 7.26763)

[node name="xporb" parent="." instance=ExtResource("26_iprpn")]

[connection signal="pressed" from="Player/UI/Dialog/Box/okButton" to="Player/UI/Dialog" method="_on_ok_button_pressed"]
[connection signal="animation_finished" from="Player/UI/Dialog/VBoxContainer/TypeWriterEffect" to="Player/UI/Dialog" method="_on_type_writer_effect_animation_finished"]
[connection signal="item_out_of_inventory" from="Player/InventoryUI" to="." method="_on_inventory_ui_item_out_of_inventory"]
